src/test/deca/context/invalid/created/object/equals_boolean_float.deca
// Description :
//    test equals entre un boolean et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: 
class A{}
{
boolean a;
float b;
int c = a.equal(b);
}
